--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
+html {
+	font-size: 16px;
+}
+
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-size: 1em;
 }
 
 .container {
@@ -23,23 +28,23 @@ h4 {
 }
 
 h1 {
-	font-size: 30px;
+	font-size: 1.875em;
 }
 
 h2 {
-  font-size: 24px;
+  font-size: 1.5em;
 }
 
 h3 {
-	font-size: 18px;
+	font-size: 1.125em;
 }
 
 h4 {
-	font-size: 12px;
+	font-size: .75em;
 }
 
 p {
-	font-size: 14px;
+	font-size: .875em;
 	line-height: 21px;
   padding: 0 30px;
 }
@@ -57,6 +62,7 @@ header h1 {
 	margin: 0;
 	padding: 38px 0;
 }
+
 header h1 span {
 	color: #77a466;
 }
@@ -64,17 +70,20 @@ header h1 span {
 header nav {
 	padding: 46px 0;
 }
+
 header nav ul {
 	margin: 0;
 	padding: 0;
 }
+
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 14px;
+	font-size: .875em;
 	padding: 0 10px;
 	display: inline;
 }
+
 header nav ul li a{
 	text-decoration: none;
 	color:#77a466;
@@ -92,6 +101,7 @@ header nav ul li a{
 .main-image {
 	height: auto;
 }
+
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
@@ -100,14 +110,16 @@ header nav ul li a{
 .main-title {
 	height: auto;
 }
+
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
 }
+
 .main-title p {
 	padding: 0;
-	font-size: 16px;
+	font-size: 1em;
 	line-height: 25px;
 }
 
@@ -144,12 +156,12 @@ header nav ul li a{
 
 .reviews {
 	color: #333;
-	font-size: 16px;
+	font-size: 1em;
 	line-height: 21px;
 }
 
 .address {
-	font-size: 16px;
+	font-size: 1em;
 	line-height: 24px;
 }
 
@@ -167,5 +179,5 @@ footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 14px;
+	font-size: .875em;
 }
