--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ h4 {
 	color: black;
 	text-transform: uppercase;
 	font-weight: 700;
+	margin: 0;
 }
 
 h1 {
@@ -47,7 +48,7 @@ h4 {
 p {
 	font-size: .875em;
 	line-height: 21px;
-  padding: 0 0px;
+	margin: 0;
 }
 
 /*The widths are in a percentage!*/
@@ -128,12 +129,12 @@ header nav ul li a{
 
 .main-title h3 {
 	text-align: left;
-	padding: 5px 0;
+	padding: 10px 0;
 	color: #77a466;
 }
 
 .main-title p {
-	padding: 0;
+	padding: 10px 0;
 	font-size: 1em;
 	line-height: 25px;
 }
@@ -142,22 +143,24 @@ header nav ul li a{
 .section-two,
 .section-three {
 	width: 100%;
-	height: auto;
+	height: 100%;
 	border-top: 1px solid #eee;
 }
 
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two {
-
-}
-
+.section-one h4,
 .section-two h4,
 .section-three h4 {
-	padding: 10px 0px;
+	padding: 20px 0;
 }
+
+.section-one p,
+.section-two p,
+.section-three p {
+	padding-bottom: 20px;
+}
+
+
+
 
 .menu {
 	list-style: none;
@@ -188,6 +191,7 @@ footer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 10px 0;
 }
 
 footer span {
