--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ header nav ul li a{
 	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
 	display; flex;
-	justify-content: flex-end;
+	justify-content: center;
 	align-items: center;
 }
 
@@ -121,7 +121,7 @@ header nav ul li a{
 	height: auto;
 	width: 100%;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	flex-wrap: wrap;
 }
@@ -152,14 +152,10 @@ header nav ul li a{
 	padding: 20px 0;
 }
 
-.section-one p,
 .section-two p,
 .section-three p {
 	padding-bottom: 20px;
 }
-
-
-
 
 .menu {
 	list-style: none;
@@ -167,7 +163,7 @@ header nav ul li a{
 }
 
 .menu li {
-	padding: 10px 0;
+	padding-bottom: 10px;
 	color:#77a466;
 }
 
@@ -198,4 +194,55 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: .875em;
+}
+
+
+@media all and (min-width:768px) {
+ /* Tablet styles here */
+	.bottom-section {
+		display: flex;
+		justify-content: space-between;
+		align-items: baseline;
+		flex-flow: row nowrap;
+		border-top: 1px solid #eee;
+	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+		width: 30%;
+		height: 100%;
+		border-top: none;
+	}
+
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0px 20px;
+	}
+
+}
+
+
+@media all and (min-width:1200px) {
+    /* Desktop styles here */
+	.bottom-section {
+
+	 }
+
+	 .section-one {
+
+
+	 }
+
+
+	 .section-two {
+
+
+	 }
+
+	 .section-three {
+
+
+	 }
 }
