--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ header h1 span {
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 20px 0;
 }
 
 header nav ul {
@@ -85,7 +85,7 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: .875em;
-	padding: 10 0px;
+	padding: 15px 0px;
 	list-style-type: none;
 }
 
@@ -226,23 +226,31 @@ footer span {
 
 @media all and (min-width:1200px) {
     /* Desktop styles here */
-	.bottom-section {
+	header {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+		align-items: center;
+	}
 
-	 }
+	header nav {
+		padding: 20px;
+	}
 
-	 .section-one {
+	header h1 {
+		border: none;
+		text-align: left;
+		padding: 20px;
+	}
 
+	header nav ul {
+    display: flex;
+    flex-flow: row nowrap;
+  }
 
-	 }
+	header nav ul li {
+    margin: 0;
+		margin-left: 15px;
+  }
 
-
-	 .section-two {
-
-
-	 }
-
-	 .section-three {
-
-
-	 }
 }
