--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ header h1 span {
 }
 
 header nav {
-	padding: 20px 0;
+	padding: 10px 0px;
 }
 
 header nav ul {
@@ -85,7 +85,7 @@ header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: .875em;
-	padding: 15px 0px;
+	padding: 10px 0px;
 	list-style-type: none;
 }
 
@@ -112,9 +112,6 @@ header nav ul li a{
 	width: 100%;
 	border-top: 3px solid #77a466;
 	border-bottom: 3px solid #77a466;
-	display; flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .main-title {
@@ -234,23 +231,25 @@ footer span {
 	}
 
 	header nav {
-		padding: 20px;
+		padding: 20px 0;
+		width: 40%;
 	}
 
 	header h1 {
 		border: none;
 		text-align: left;
-		padding: 20px;
+		padding: 20px 0;
+		width: 30%;
 	}
 
 	header nav ul {
     display: flex;
     flex-flow: row nowrap;
+		justify-content: space-between;
   }
 
 	header nav ul li {
     margin: 0;
-		margin-left: 15px;
-  }
 
+  }
 }
